# tinos-cmake-dev

./: CMakeLists.txt  LICENSE.md  README.md  SECURITY.md  TODO.md  build.py  grub.cfg  linker.ld  toolchain.cmake
.github/ISSUE_TEMPLATE/: bug-report.md  feature-request.md
docs/: building.md  setup.md
include/: CMakeLists.txt  idt.h  io.c  io.h  irq.h  pic.h  scancodes.c  scancodes.h  text.c  text.h  vga.h
src/console/: CMakeLists.txt  console.c
src/console/commands/: clear.c  clear.h  help.h  uname.c  uname.h  ver.c  ver.h  whoami.c  whoami.h
src/include/: CMakeLists.txt  io.c  io.h  text.c  vga.c
src/kernel/: CMakeLists.txt  boot.s  main.c  text.h
src/kernel/drivers/: CMakeLists.txt
src/kernel/drivers/keyboard/: handler.c  handler.h  poll_loop.c  poll_loop.h
src/kernel/idt/: CMakeLists.txt  idt.c  idt_load.s  pic.c
src/kernel/irq/: CMakeLists.txt  irq.c  irq0.s  irq1.s
tools/: tool.sh
